samples/_failures_safe/1761316509_28e8aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1c6affe.c: In function ‘main’:
./samples/SAFE/__tmp_d1c6affe.c:166:26: error: missing terminating " character
  166 |     mat2.cols = read_int("Enter columns for matrix 2 (1-8):
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d1c6affe.c:166:5: error: expected expression at end of input
  166 |     mat2.cols = read_int("Enter columns for matrix 2 (1-8):
      |     ^~~~
./samples/SAFE/__tmp_d1c6affe.c:166:17: error: too few arguments to function ‘read_int’
  166 |     mat2.cols = read_int("Enter columns for matrix 2 (1-8):
      |                 ^~~~~~~~
./samples/SAFE/__tmp_d1c6affe.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_d1c6affe.c:166:5: error: expected declaration or statement at end of input
  166 |     mat2.cols = read_int("Enter columns for matrix 2 (1-8):
      |     ^~~~
